[package]
name = "fdb-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mapr = "0.8.0"
assembly = { git = "https://github.com/LUDevNet/Assembly", rev = "1b31c494c4f48c711e67bcba23236b715c6cfd52" }
rusqlite = "0.21.0"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
